--- a/yahcss.css
+++ b/yahcss.css
@@ -7,6 +7,7 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
+    background-color: #C6E5B1;
 }
 
 header {
@@ -63,7 +64,7 @@ header {
 
 .btn-primary {
     padding: 10px 20px;
-    background-color: #ff2d55;
+    background-color: #229A00;
     color: white;
     border: none;
     border-radius: 20px;
